# csgop-rs

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
libs/csgo/: Cargo.toml
libs/csgo/src/: cli.rs  config.rs  core.rs  geo.rs  lib.rs  logs.rs  rgx.rs  state.rs  utils.rs
src/: main.rs
src/csgo/: core.rs  geo.rs  logs.rs  mod.rs  rgx.rs  state.rs  utils.rs
