[package]
name = "csgolp"
version = "0.1.0"
description = "A Counter Strike: Global Offensive server log parser"
authors = ["rufus-stone <60827786+rufus-stone@users.noreply.github.com>"]
edition = "2018"

[dependencies]

# Logging
log = "0.4.14"
simple_logger = "1.11.0"

# CLI
structopt = "0.3.21"

# Core
rand = "0.8.3"
regex = "1.4.5"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
lazy_static = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
