[package]
name = "csgo"
version = "0.1.0"
authors = ["rufus-stone <60827786+rufus-stone@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
simple_logger = "1.11.0"
structopt = "0.3.21"
rand = "0.8.3"
regex = "1.4.5"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
lazy_static = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
directories = "3.0.1"
toml = "0.5.8"
digest = "0.9.0"
md-5 = "0.9.1"
sha-1 = "0.9.4"
sha2 = "0.9.3"
hex = "0.4.3"
